誤った改行を修正

--- a/hardproblem/1-06.html
+++ b/hardproblem/1-06.html
@@ -117,8 +117,7 @@
 　視界がいっそう涙で歪んでいく。
 ――機械になりたい。
 　かつて希海はそう思っていた。今でもそう思っている。
-　機械なら臆病風や怠惰といった心に負
-けることもなく、自分がやろうと思ったことができる。機械なら嫌われることや失敗することを恐れたりなんかはしない。
+　機械なら臆病風や怠惰といった心に負けることもなく、自分がやろうと思ったことができる。機械なら嫌われることや失敗することを恐れたりなんかはしない。
 「優しさと臆病さはコイン裏表のようなものだ。大丈夫。君ならきっと彼女と上手くやっていけるよ」
 　希海は弱々しく頷いた。
 　今にもかすれて消えてしまいそうな動作。それは機械に憧れるひ弱な人間の、吹けば飛んでしまうような矜持の表れだった。
