--- a/hardproblem/2-02.html
+++ b/hardproblem/2-02.html
@@ -37,7 +37,7 @@
 　隣を歩くリコが口を開いた。
 「ん、ああ。別にちょっと覗いてみただけよ」
 「でも希海さん、あそこに通うつもりで、ここまで来たんじゃないんですか？」
-　料理教室を見に着たなんて言っただろうか。世間一般の常識には疎いくせして、リコはこういう勘だけやたらと鋭い。
+　料理教室を見に来たなんて言っただろうか。世間一般の常識には疎いくせして、リコはこういう勘だけやたらと鋭い。
 「違うって。ほら、ああいうところって結構お金かかるしね。安かったら行ってもいいかなって思うけど、あの様子じゃ結構いい値段するわよ」
 　リコの追求を適当にかわしながら階段を登る。踊り場を折り返して最後の一段を乗り越えると視界が開けた。ショッピングセンターの2階部分に設けられた屋外広場である。駆けっこはおろか、ところどころに置かれたベンチやオブジェを取り除けばフットサルすら余裕でできそうなくらいのスペース。開放前に作られた築数十年の施設とはいえ、このような贅沢な空間のとり方はそれ以降の建築に通じるものがあった。
 「今日もいい天気ですね」
