とりあえず既存ページへリンク

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
  <div class="bd">
   <img src="https://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" />
-  <li><a href="#">駄文</a></li>
-  <li><a href="#">ヘタレ絵</a></li>
-  <li><a href="#">MIDI遊び</a></li>
-  <li><a href="#">リンク</a></li>
+  <li><a href="http://mayuragicenter.yu-yake.com/novel.html">駄文</a></li>
+  <li><a href="http://mayuragicenter.yu-yake.com/picture.html">ヘタレ絵</a></li>
+  <li><a href="http://mayuragicenter.yu-yake.com/music.html">MIDI遊び</a></li>
+  <li><a href="http://mayuragicenter.yu-yake.com/link.html">リンク</a></li>
  </div>
 </body>
 </html>
