テーブル使ってみる

--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
 <html>
+
 <head>
- <meta charset="UTF-8">
- <link rel="stylesheet" href="style.css" type="text/css">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+
 <body>
- <div class="bd">
-  <img src="https://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" />
-  <li><a href="http://mayuragicenter.yu-yake.com/novel.html">駄文</a></li>
-  <li><a href="http://mayuragicenter.yu-yake.com/picture.html">ヘタレ絵</a></li>
-  <li><a href="http://mayuragicenter.yu-yake.com/music.html">MIDI遊び</a></li>
-  <li><a href="http://mayuragicenter.yu-yake.com/link.html">リンク</a></li>
- </div>
+
+  <div class="logo">
+    <img src="https://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" width="366" height="101">
+  </div>
+  <table>
+    <tbody>
+      <tr>
+        <td><a href="http://mayuragicenter.yu-yake.com/novel.html">駄文</a></td>
+        <td><a href="http://mayuragicenter.yu-yake.com/picture.html">ヘタレ絵</a></td>
+      </tr>
+      <tr>
+      	<td><a href="http://mayuragicenter.yu-yake.com/music.html">MIDI遊び</a></td>
+      	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
+      </tr>
+      <tr>
+        <td><a href="http://mypage.syosetu.com/273349/" target="_blank">なろう</a></td>
+        <td><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></td>
+      </tr>
+      <tr>
+        <td><a href="http://github.com/minamichihaya">GitHub</a></td>
+        <td><a href="http://mayuragicenter.yu-yake.com/link.html">リンク</a></td>
+      </tr>
+    </tbody>
+  </table>
+   
 </body>
 </html>
