ヘタレ絵のリンク差し替え

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css" type="text/css">
+  <title>真揺中心</title>
 </head>
 
 <body>
 
   <div class="logo">
-    <img src="https://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" width="366" height="101">
+    <a href="index.html">
+      <img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心">
+    </a>
   </div>
-  <table>
+  <table class="top">
     <tbody>
       <tr>
         <td><a href="http://mayuragicenter.yu-yake.com/novel.html">駄文</a></td>
-        <td><a href="http://mayuragicenter.yu-yake.com/picture.html">ヘタレ絵</a></td>
+        <td><a href="picture.html">ヘタレ絵</a></td>
       </tr>
       <tr>
       	<td><a href="http://mayuragicenter.yu-yake.com/music.html">MIDI遊び</a></td>
