--- a/picture/fm05.html
+++ b/picture/fm05.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="logo">
-    <a href="../mayuragicenter.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
