--- a/picture/nozomi02.html
+++ b/picture/nozomi02.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a><br> 
+    <a href="../hardproblem/index.html">希海</a><br> 
     いつ完成するんでしょうね
   </div>
 
