--- a/picture/nozomi05.html
+++ b/picture/nozomi05.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a><br> 
+    <a href="../hardproblem/index.html">希海</a><br> 
     ガン飛ばしてるわけではない（腕章の文字はまた今度）
   </div>
 
