--- a/picture/nozomi06.html
+++ b/picture/nozomi06.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a><br> 
+    <a href="../hardproblem/index.html">希海</a><br> 
     前に描いたやつ作りなおした。それにしても顔安定しない。
   </div>
 
