--- a/picture/nozomi07.html
+++ b/picture/nozomi07.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a><br> 
+    <a href="../hardproblem/index.html">希海</a><br> 
     取得日は適当なので真に受けないでね
   </div>
 
