--- a/picture/riko04.html
+++ b/picture/riko04.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">リコ</a><br> 
+    <a href="../hardproblem/index.html">リコ</a><br> 
     §3扉絵。アヒル座りが描けずにスカートでごまかす。
   </div>
 
