--- a/picture/riko05.html
+++ b/picture/riko05.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">リコ</a><br> 
+    <a href="../hardproblem/index.html">リコ</a><br> 
     お気に入り
   </div>
 
