--- a/picture/riko06.html
+++ b/picture/riko06.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">リコ</a><br> 
+    <a href="../hardproblem/index.html">リコ</a><br> 
     §4扉絵予定だったけど差し替えるつもり。
   </div>
 
