--- a/picture/riko07.html
+++ b/picture/riko07.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">リコ</a><br> 
+    <a href="../hardproblem/index.html">リコ</a><br> 
     作り直しその2
   </div>
 
