--- a/picture/riko08.html
+++ b/picture/riko08.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">リコ</a><br> 
+    <a href="../hardproblem/index.html">リコ</a><br> 
     作り直しその3。めっちゃ苦戦した。
   </div>
 
