駄文へのリンク差し替え

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <table class="top">
     <tbody>
       <tr>
-        <td><a href="http://mayuragicenter.yu-yake.com/novel.html">駄文</a></td>
+        <td><a href="novel.html">駄文</a></td>
         <td><a href="picture.html">ヘタレ絵</a></td>
       </tr>
       <tr>
