工事中の部分に打ち消し線

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <td><a href="picture.html">ヘタレ絵</a></td>
       </tr>
       <tr>
-      	<td><a href="http://mayuragicenter.yu-yake.com/music.html">MIDI遊び</a></td>
+      	<td><s><a href="">MIDI遊び</a></s></td>
       	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
       </tr>
       <tr>
@@ -29,7 +29,7 @@
       </tr>
       <tr>
         <td><a href="http://github.com/minamichihaya">GitHub</a></td>
-        <td><a href="http://mayuragicenter.yu-yake.com/link.html">リンク</a></td>
+        <td><s><a href="">リンク</a></s></td>
       </tr>
     </tbody>
   </table>
