--- a/picture.html
+++ b/picture.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="logo">
-    <a href="index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="picture_text">
@@ -65,7 +65,7 @@
   </table>
 
   <div class="back">
-    <a href="index.html">戻る</a>
+    <a href="../">戻る</a>
   <div/>
 
 </body>
