--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="logo">
-    <a href="index.html">
+    <a href="">
       <img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心">
     </a>
   </div>
