--- a/picture/fm01.html
+++ b/picture/fm01.html
@@ -16,8 +16,11 @@
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/fm01.jpg" alt="">
   </div>
   
+  <div class="picturetitle">
+　  <a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>（かいたひと：<a href="http://mypage.syosetu.com/24052/" target="_blank">浅月深幌</a>さん）<br> 
+　</div>
+  
   <div class="caption">
-    <a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>（かいたひと：<a href="http://mypage.syosetu.com/24052/" target="_blank">浅月深幌</a>さん）<br> 
     希海を描いていただきました。<br> 
     いやあ美人ですね。感謝感謝です。
   </div>
