絵のタイトルとキャプションを分離

--- a/picture/fm01.html
+++ b/picture/fm01.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="picturetitle">
-　  <a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>（かいたひと：<a href="http://mypage.syosetu.com/24052/" target="_blank">浅月深幌</a>さん）<br> 
+　  <a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>（かいたひと：<a href="http://mypage.syosetu.com/24052/" target="_blank">浅月深幌</a>さん）
 　</div>
   
   <div class="caption">
