絵のタイトルとキャプションを分離

--- a/picture/fm02.html
+++ b/picture/fm02.html
@@ -15,9 +15,12 @@
   <div class="image">
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/fm02.jpg" alt="">
   </div>
+
+  <div class="picturetitle">
+    <a href="http://ncode.syosetu.com/n3095e/" target="_blank">フツキ嬢</a>と<a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>
+  </div>
   
   <div class="caption">
-    <a href="http://ncode.syosetu.com/n3095e/" target="_blank">フツキ嬢</a>と<a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a><br> 
     お礼絵。よその子様に変な服着せてしまった……
   </div>
 
