絵のタイトルとキャプションを分離

--- a/picture/fm03.html
+++ b/picture/fm03.html
@@ -16,8 +16,11 @@
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/fm03.jpg" alt="">
   </div>
   
+  <div class="picturetitle">
+    ぷよぷよ風<a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>（かいたひと：<a href="http://pasberth.github.io/" target="_blank">パスベルス</a>さん）
+  </div>
+  
   <div class="caption">
-    ぷよぷよ風<a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>（かいたひと：<a href="http://pasberth.github.io/" target="_blank">パスベルス</a>さん）<br> 
     髪のふんわり感とかやさぐれ感とかよく出てます！<br> 
     かわいいしかっこいい！
   </div>
