絵のタイトルとキャプションを分離

--- a/picture/fm04.html
+++ b/picture/fm04.html
@@ -16,8 +16,11 @@
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/fm04.png" alt="">
   </div>
   
+  <div class="picturetitle">
+    フィア(仮)（かいたひと：<a href="http://pasberth.github.io/" target="_blank">パスベルス</a>さん）
+  </div>
+  
   <div class="caption">
-    フィア(仮)（かいたひと：<a href="http://pasberth.github.io/" target="_blank">パスベルス</a>さん）<br> 
     いつか描きたいファンタジーのキャラ。<br> 
     ツイッターで設定語りしてたらなんと絵を描いていただきました。<br> 
     しかもほぼ想像で描いたというのに、相当イメージに近いですコレ。<br> 
