--- a/picture/fm05.html
+++ b/picture/fm05.html
@@ -9,15 +9,18 @@
 <body>
 
   <div class="logo">
-    <a href="../index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
     <a href="fm05_.html"><img src="http://dl.dropboxusercontent.com/u/125933124/image/fm05.jpg" alt=""></a>
   </div>
   
+  <div class="picturetitle">
+    <a href="http://pasberth.github.io/gallery/pasberth1/index.html">パスベルス</a>（かいたひと：南正太郎）
+  </div>
+  
   <div class="caption">
-    <a href="http://pasberth.github.io/gallery/pasberth1/index.html">パスベルス</a>（かいたひと：南正太郎）<br> 
     似せることを放棄した結果。<br> 
     服はめんどくさかったので省略（すまぬ）。<br> 
     人様のキャラ書くのって難しいですね……<br> 
