--- a/picture/fm05_.html
+++ b/picture/fm05_.html
@@ -9,15 +9,18 @@
 <body>
 
   <div class="logo">
-    <a href="../index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
     <a href="fm05.html"><img src="http://dl.dropboxusercontent.com/u/125933124/image/fm05_.png" alt=""></a>
   </div>
   
+  <div class="picturetitle">
+    
+  </div>
+    <a href="http://pasberth.github.io/gallery/pasberth1/index.html">パスベルス</a>（かいたひと：南正太郎）
   <div class="caption">
-    <a href="http://pasberth.github.io/gallery/pasberth1/index.html">パスベルス</a>（かいたひと：南正太郎）<br> 
     いつも同じような塗りばっかだとつまんないので。<br> 
     なかなかいい感じに塗れたと自分では思ってます。<br> 
   </div>
