--- a/picture/janedoe02.html
+++ b/picture/janedoe02.html
@@ -9,15 +9,18 @@
 <body>
 
   <div class="logo">
-    <a href="../index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/janedoe02.jpg" alt="">
   </div>
   
+  <div class="picturetitle">
+    誰でもない子さん
+  </div>
+  
   <div class="caption">
-    誰でもない子さん<br> 
     どういうシチュエーションなんだこれ
   </div>
 
