絵のタイトルとキャプションを分離

--- a/picture/norika01.html
+++ b/picture/norika01.html
@@ -9,15 +9,18 @@
 <body>
 
   <div class="logo">
-    <a href="../index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/norika01.png" alt="">
   </div>
   
+  <div class="picturetitle">
+    <a href="http://mayuragicenter.yu-yake.com/matomaranai_character.html">紀佳</a>
+  </div>
+  
   <div class="caption">
-    <a href="http://mayuragicenter.yu-yake.com/matomaranai_character.html">紀佳</a><br> 
     スマホに指で描いたその2
   </div>
 
