--- a/picture/nozomi02.html
+++ b/picture/nozomi02.html
@@ -9,15 +9,18 @@
 <body>
 
   <div class="logo">
-    <a href="../index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/nozomi02.jpg" alt="">
   </div>
   
+  <div class="picturetitle">
+    <a href="../hardproblem/">希海</a>
+  </div>
+
   <div class="caption">
-    <a href="../hardproblem/index.html">希海</a><br> 
     いつ完成するんでしょうね
   </div>
 
