--- a/picture/nozomi01.html
+++ b/picture/nozomi01.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="picturetitle">
-    <a href="../hardproblem/index.html">希海</a>
+    <a href="../hardproblem/">希海</a>
   </div>
   
   <div class="caption"> 
