--- a/picture/fm03.html
+++ b/picture/fm03.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="picturetitle">
-    ぷよぷよ風<a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>（かいたひと：<a href="http://pasberth.github.io/" target="_blank">パスベルス</a>さん）
+    ぷよぷよ風<a href="../hardproblem/">希海</a>（かいたひと：<a href="http://pasberth.github.io/" target="_blank">パスベルス</a>さん）
   </div>
   
   <div class="caption">
