--- a/picture/fm02.html
+++ b/picture/fm02.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="picturetitle">
-    <a href="http://ncode.syosetu.com/n3095e/" target="_blank">フツキ嬢</a>と<a href="http://minamichihaya.github.io/hardproblem/index.html">希海</a>
+    <a href="http://ncode.syosetu.com/n3095e/" target="_blank">フツキ嬢</a>と<a href="../hardproblem/">希海</a>
   </div>
   
   <div class="caption">
