--- a/picture/riko03.html
+++ b/picture/riko03.html
@@ -9,16 +9,19 @@
 <body>
 
   <div class="logo">
-    <a href="../index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/riko03.jpg" alt="">
   </div>
   
+  <div class="picturetitle">
+    <a href="../hardproblem/">リコ</a>
+  </div>
+  
   <div class="caption">
-    <a href="../hardproblem/index.html">リコ</a><br> 
-    §2扉絵。初ペン入れ。
+    かつての§2扉絵。初ペン入れだった。
   </div>
 
   <div class="back">
