--- a/picture/riko05.html
+++ b/picture/riko05.html
@@ -9,15 +9,18 @@
 <body>
 
   <div class="logo">
-    <a href="../index.html"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
     <img src="http://dl.dropboxusercontent.com/u/125933124/image/riko05.jpg" alt="">
   </div>
   
+  <div class="picturetitle">
+    <a href="../hardproblem/">リコ</a>
+  </div>
+  
   <div class="caption">
-    <a href="../hardproblem/index.html">リコ</a><br> 
     お気に入り
   </div>
 
