リンクターゲットの変更

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <td><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></td>
       </tr>
       <tr>
-        <td><a href="http://github.com/minamichihaya">GitHub</a></td>
+        <td><a href="http://github.com/minamichihaya" target="_blank">GitHub</a></td>
         <td><s>リンク</s></td>
       </tr>
     </tbody>
