--- a/hardproblem/1-01.html
+++ b/hardproblem/1-01.html
@@ -25,7 +25,7 @@
 「悪くないかなっ！」
 　両足で布団を勢い良く跳ねのけ、その反動を使って飛び起きる。立ちくらみで目の前が暗転するのをこらえて、カーテンを開けた。ガラス越しの強烈な太陽光線に希海は思わず目を細める。
 　そういえば、朝日には体内時計をリセットする波長成分が含まれているらしい。昔、テレビか何かで聞いたことを思い出しながら、希海は太陽光が自らの身体をリセットする様子をイメージする。
-　遠く離れた宇宙の核融合炉と、そこから発せられたおびただしい数の<ruby>光子<rp>(</rp><rt>フォトン</rt><rp>)</rp></ruby>。その一部が1億5000万kmという途方もない距離を旅し地球にやってきた。大部分は大気に散乱されるも、いくらかの光子は希海の目にまで到達する。瞳孔をくぐり抜けた光は水晶体に分極を発生させながらその進路を曲げ、網膜に像を結ぶ。像を結んだ光子はロドプシンやフォトプシンの電子を励起状態へと蹴り上げ、パルス状の電気信号がマシンガンのように視神経を玉突き状に伝わっていく。そして、信号を受け取った脳ではニューロンやらシナプスやらの結合強度が変わったり化学物質だかホルモンだかを分泌したり何やらして、めでたく自分は12時に寝て8時に起きる規則正しい生活を送る真人間になる……という寸法だ。
+　遠く離れた宇宙の核融合炉と、そこから発せられたおびただしい数の<ruby>光子<rp>(</rp><rt>フォトン</rt><rp>)</rp></ruby>。その一部が1億5000万kmという途方もない距離を旅し地球にやってきた。大部分は大気に散乱されるも、いくらかの光子は希海の目にまで到達する。瞳孔をくぐり抜けた光は水晶体に分極を発生させながらその進路を曲げ、網膜に像を結ぶ。像を結んだ光子は<ruby>光感受性蛋白質<rp>(</rp><rt>ロドプシンやフォトプシン</rt><rp>)</rp></ruby>の電子を励起状態へと蹴り上げ、パルス状の電気信号がマシンガンのように視神経を玉突き状に伝わっていく。そして、信号を受け取った脳ではニューロンやらシナプスやらの結合強度が変わったり化学物質だかホルモンだかを分泌したり何やらして、めでたく自分は12時に寝て8時に起きる規則正しい生活を送る真人間になる……という寸法だ。
 　んっ……、と一度大きく伸びをして希海は窓に背を向ける。せっかく早起きしたのだ。今日は久しぶりに外へ出掛けてみよう。そろそろ夏服が必要になってくる季節だ。それと食料が少なくなってきているから、これも買っておきたい。ついでにタバコも。そういえば欲しかったゲームの予約も始まっていたはずだ。どうせ出掛けるならネットではなくて実店舗で購入しよう。そうすれば特典も付く。希海はそんな取り留めもないことを考えながら、おぼつかない足取りで洗面所へと向かい、顔を洗い始める。
 （ま、でもそんなに一度にやらなくていっか）
 　せっかく早起きができて、生活リズムがもとに戻ったのだ。あれもこれもと一度に色んなことをやってヘトヘトになったらいけない。最近は少し疲れると平気で10時間以上寝てしまう。そうなったら昨日までの昼夜逆転生活に逆戻りだ。ここは、仕事を1日ひとつに限定して、生活リズムの維持に努めた方が懸命かもしれない。
