簡体字入れてみる

--- a/hardproblem/1-02.html
+++ b/hardproblem/1-02.html
@@ -26,7 +26,7 @@
 　頭上の送電線を見つめて、誰に伝えるでもなくぽつりとつぶやいた。
 　子供の頃の記憶は、誰にだって宝物だ。たとえランドセルがキャラクターをあしらったリュックサックに変わっても、純粋だったあの頃の、世界がキラキラと輝いていたようなあの感じは、今も昔も変わらないのかもしれない。
 　そんなことを考えながら歩いていると、やがて公園に差し掛かった。
-――<span class=simplified>真揺七号公園</span>
+――<span class=simplified>真摇七号公园</span>／まゆらぎななごうこうえん
 　入口に設置された金属プレートには簡体の文字が刻まれている。ご丁寧にも平仮名が併記されているのは、まだ漢字も読めない子供への気遣いか、それとも簡体字に馴染みが薄かった世代への配慮か。おそらく両方だろう。すっかりくすんで輝きを失った真鍮は、さながら顔に刻まれた皺のように、自らが経てきた人生の長さを誇らしげに主張していた。このプレートが設置された詳細な時期を希海は知らないが、ここ<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンの街開きと同時だと仮定すれば、設置から軽く50年は経っている計算となる。
 　50年か、と希海は思う。それだけの歳月に耐えてなお、公園の名称表示という仕事をこなせているのなら、このプレートはずいぶんと立派だ。自分なんてこの10年間ですっかり変わってしまったというのに。
 ――10年。
