画像のアップロード

--- a/picture/fm01.html
+++ b/picture/fm01.html
@@ -13,12 +13,12 @@
   </div>
   
   <div class="image">
-    <img src="http://dl.dropboxusercontent.com/u/125933124/image/fm01.jpg" alt="">
+    <img src="image/fm01.jpg" alt="">
   </div>
   
   <div class="picturetitle">
-　  <a href="../hardproblem/">希海</a>（かいたひと：<a href="http://mypage.syosetu.com/24052/" target="_blank">浅月深幌</a>さん）
-　</div>
+    <a href="../hardproblem/">希海</a>（かいたひと：<a href="http://mypage.syosetu.com/24052/" target="_blank">浅月深幌</a>さん）
+  </div>
   
   <div class="caption">
     希海を描いていただきました。<br> 
