--- a/picture/fm05.html
+++ b/picture/fm05.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <a href="fm05_.html"><img src="http://dl.dropboxusercontent.com/u/125933124/image/fm05.jpg" alt=""></a>
+    <a href="fm05_.html"><img src="image/fm05.jpg" alt=""></a>
   </div>
   
   <div class="picturetitle">
