--- a/picture/riko07.html
+++ b/picture/riko07.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <a href="riko07_.html"><img src="http://dl.dropboxusercontent.com/u/125933124/image/riko07.jpg" alt=""></a>
+    <a href="riko07_.html"><img src="image/riko07.jpg" alt=""></a>
   </div>
   
   <div class="picturetitle">
