--- a/picture/fm02.html
+++ b/picture/fm02.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <img src="http://dl.dropboxusercontent.com/u/125933124/image/fm02.jpg" alt="">
+    <img src="image/fm02.jpg" alt="">
   </div>
 
   <div class="picturetitle">
