--- a/picture/fm05_.html
+++ b/picture/fm05_.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <a href="fm05.html"><img src="http://dl.dropboxusercontent.com/u/125933124/image/fm05_.png" alt=""></a>
+    <a href="fm05.html"><img src="image/fm05_.png" alt=""></a>
   </div>
   
   <div class="picturetitle">
