--- a/picture/janedoe01.html
+++ b/picture/janedoe01.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <img src="http://dl.dropboxusercontent.com/u/125933124/image/janedoe01.png" alt="">
+    <img src="image/janedoe01.png" alt="">
   </div>
   
   <div class="picturetitle">
