--- a/picture/norika01.html
+++ b/picture/norika01.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <img src="http://dl.dropboxusercontent.com/u/125933124/image/norika01.png" alt="">
+    <img src="image/norika01.png" alt="">
   </div>
   
   <div class="picturetitle">
