--- a/picture/norika03.html
+++ b/picture/norika03.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <img src="http://dl.dropboxusercontent.com/u/125933124/image/norika03.png" alt="">
+    <img src="image/norika03.png" alt="">
   </div>
   
   <div class="picturetitle">
