--- a/picture/nozomi01.html
+++ b/picture/nozomi01.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <img src="http://dl.dropboxusercontent.com/u/125933124/image/nozomi01.jpg" alt="">
+    <img src="image/nozomi01.jpg" alt="">
   </div>
   
   <div class="picturetitle">
