--- a/picture/nozomi07.html
+++ b/picture/nozomi07.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <img src="http://dl.dropboxusercontent.com/u/125933124/image/nozomi07.png" alt="">
+    <img src="nozomi07.png" alt="">
   </div>
   
   <div class="picturetitle">
