--- a/picture/riko03.html
+++ b/picture/riko03.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <img src="http://dl.dropboxusercontent.com/u/125933124/image/riko03.jpg" alt="">
+    <img src="image/riko03.jpg" alt="">
   </div>
   
   <div class="picturetitle">
