--- a/picture/riko07_.html
+++ b/picture/riko07_.html
@@ -13,7 +13,7 @@
   </div>
   
   <div class="image">
-    <a href="riko07.html"><img src="http://dl.dropboxusercontent.com/u/125933124/image/riko07_.jpg" alt=""></a>
+    <a href="riko07.html"><img src="image/riko07_.jpg" alt=""></a>
   </div>
   
   <div class="caption">
