アイコンおよびロゴのアップロード

--- a/hardproblem/4-01.html
+++ b/hardproblem/4-01.html
@@ -12,7 +12,7 @@
 
   <div class="contents">
 <div class="logo hpot-sect4-logo">
-  <img src="../img/section4title.png" />
+  <img src="../img/hpot4.png" />
 </div>
 
 <div class="text">
