--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="logo">
-      <img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心">
+      <img src="img/sitelogo.jpg" alt="真揺中心">
   </div>
   <table class="top">
     <tbody>
