--- a/picture.html
+++ b/picture.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="logo">
-    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="img/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="picture_text">
@@ -20,32 +20,32 @@
     <caption>らくがき（えっちいのアリ）</caption>
     <tbody>
       <tr>
-        <td><a href="picture/riko08.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_riko08.jpg"></a></td>
-        <td><a href="picture/nozomi07.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_nozomi07.jpg"></a></td>
-        <td><a href="picture/riko07.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_riko07.jpg"></a></td>
-        <td><a href="picture/nozomi06.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_nozomi06.jpg"></a></td>
-        <td><a href="picture/riko06.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_riko06.jpg"></a></td>
-        <td><a href="picture/riko05.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_riko05.jpg"></a></td>
+        <td><a href="picture/riko08.html"><img src="thumbnail/tn_riko08.jpg"></a></td>
+        <td><a href="picture/nozomi07.html"><img src="thumbnail/tn_nozomi07.jpg"></a></td>
+        <td><a href="picture/riko07.html"><img src="thumbnail/tn_riko07.jpg"></a></td>
+        <td><a href="picture/nozomi06.html"><img src="thumbnail/tn_nozomi06.jpg"></a></td>
+        <td><a href="picture/riko06.html"><img src="thumbnail/tn_riko06.jpg"></a></td>
+        <td><a href="picture/riko05.html"><img src="thumbnail/tn_riko05.jpg"></a></td>
       </tr>
       <tr>
-        <td><a href="picture/nozomi05.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_nozomi05.jpg"></a></td>
-        <td><a href="picture/janedoe02.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_janedoe02.jpg"></a></td>
-        <td><a href="picture/norika03.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_norika03.jpg"></a></td>
-        <td><a href="picture/riko04.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_riko04.jpg"></a></td>
-        <td><a href="picture/nozomi04.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_nozomi04.jpg"></a></td>
-        <td><a href="picture/riko03.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_riko03.jpg"></a></td>
+        <td><a href="picture/nozomi05.html"><img src="thumbnail/tn_nozomi05.jpg"></a></td>
+        <td><a href="picture/janedoe02.html"><img src="thumbnail/tn_janedoe02.jpg"></a></td>
+        <td><a href="picture/norika03.html"><img src="thumbnail/tn_norika03.jpg"></a></td>
+        <td><a href="picture/riko04.html"><img src="thumbnail/tn_riko04.jpg"></a></td>
+        <td><a href="picture/nozomi04.html"><img src="thumbnail/tn_nozomi04.jpg"></a></td>
+        <td><a href="picture/riko03.html"><img src="thumbnail/tn_riko03.jpg"></a></td>
       </tr>
       <tr>
-        <td><a href="picture/nozomi03.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_nozomi03.jpg"></a></td>
-        <td><a href="picture/riko02.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_riko02.jpg"></a></td>
-        <td><a href="picture/norika02.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_norika02.jpg"></a></td>
-        <td><a href="picture/nozomi02.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_nozomi02.jpg"></a></td>
-        <td><a href="picture/riko01.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_riko01.jpg"></a></td>
-        <td><a href="picture/nozomi01.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_nozomi01.jpg"></a></td>
+        <td><a href="picture/nozomi03.html"><img src="thumbnail/tn_nozomi03.jpg"></a></td>
+        <td><a href="picture/riko02.html"><img src="thumbnail/tn_riko02.jpg"></a></td>
+        <td><a href="picture/norika02.html"><img src="thumbnail/tn_norika02.jpg"></a></td>
+        <td><a href="picture/nozomi02.html"><img src="thumbnail/tn_nozomi02.jpg"></a></td>
+        <td><a href="picture/riko01.html"><img src="thumbnail/tn_riko01.jpg"></a></td>
+        <td><a href="picture/nozomi01.html"><img src="thumbnail/tn_nozomi01.jpg"></a></td>
       </tr>
       <tr>
-        <td><a href="picture/norika01.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_norika01.jpg"></a></td>
-        <td><a href="picture/janedoe01.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_janedoe01.jpg"></a></td>
+        <td><a href="picture/norika01.html"><img src="thumbnail/tn_norika01.jpg"></a></td>
+        <td><a href="picture/janedoe01.html"><img src="thumbnail/tn_janedoe01.jpg"></a></td>
       </tr>
     </tbody>
   </table>
@@ -54,11 +54,11 @@
     <caption>いただきもの／コラボ</caption>
     <tbody>
       <tr>
-        <td><a href="picture/fm05.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_fm05.jpg"></a></td>
-        <td><a href="picture/fm04.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_fm04.jpg"></a></td>
-        <td><a href="picture/fm03.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_fm03.jpg"></a></td>
-        <td><a href="picture/fm02.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_fm02.jpg"></a></td>
-        <td><a href="picture/fm01.html"><img src="http://dl.dropboxusercontent.com/u/125933124/thumbnail/tn_fm01.jpg"></a></td>
+        <td><a href="picture/fm05.html"><img src="thumbnail/tn_fm05.jpg"></a></td>
+        <td><a href="picture/fm04.html"><img src="thumbnail/tn_fm04.jpg"></a></td>
+        <td><a href="picture/fm03.html"><img src="thumbnail/tn_fm03.jpg"></a></td>
+        <td><a href="picture/fm02.html"><img src="thumbnail/tn_fm02.jpg"></a></td>
+        <td><a href="picture/fm01.html"><img src="thumbnail/tn_fm01.jpg"></a></td>
         <td></td>
       </tr>
     </tbody>
