--- a/picture/norika02.html
+++ b/picture/norika02.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="logo">
-    <a href="../"><img src="http://dl.dropboxusercontent.com/u/125933124/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="../img/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
