一部用語の修正

--- a/hardproblem/1-02.html
+++ b/hardproblem/1-02.html
@@ -57,10 +57,10 @@
 　党立精神医療センター、――いわゆる精神病院である。
 　まさか、あそこから逃げてきたのだろうか。確かにここまでなら十分に歩ける距離だし、あそこには脱走を試みる患者が少なからずいると昔聞いたことがある。ああなるほど、そういうことなら足取りがおぼつかずに階段を踏み外してしまうのも仕方ない。
 　そう早合点しかけていた希海の目に第二の問題点が飛び込んできた。弛んだ襟から覗く女の子の白い首元。その左の鎖骨のすこし下に、小さな刺青のような刻印が見えたのだ。正方形の領域に敷き詰められた白黒の市松模様。人ならざる者を識別する、二次元コードの刻印だ。
-――ヒューマノイド。
+――アンドロイド。
 　希海は驚きのあまり、口を半開きにしたまま固まってしまう。
 （うそ……初めて見た）
-　何年か前にテレビのニュースでやっていた。上海なんとかとかいう中国のメーカーが人間そっくりなロボットの販売を開始したと。当時のニュース映像が希海の脳裏に蘇る。記者のフラッシュを受け、にこにこと微笑む女の子のロボット。見た目はこの子よりもずっと歳下で小学生くらいの外見だった。しばらくは完全受注生産だが、ゆくゆくは量産化も行いたい。インタビューを受けた社長がそんなことを話していた気がするが、まさか自分の住む日本でヒューマノイド見られる日が来るなんて思ってもみなかった。
+　何年か前にテレビのニュースでやっていた。上海なんとかとかいう中国のメーカーが人間そっくりなロボットの販売を開始したと。当時のニュース映像が希海の脳裏に蘇る。記者のフラッシュを受け、にこにこと微笑む女の子のロボット。見た目はこの子よりもずっと歳下で小学生くらいの外見だった。しばらくは完全受注生産だが、ゆくゆくは量産化も行いたい。インタビューを受けた社長がそんなことを話していた気がするが、まさか自分の住む日本でアンドロイドを見られる日が来るなんて思ってもみなかった。
 「ぅ……うぅん……」
 　希海の胸に顔を突っ伏していた女の子……の姿をしたロボットがゆっくりと顔を上げる。
 　目が合った。
