細かい修正

--- a/hardproblem/1-03.html
+++ b/hardproblem/1-03.html
@@ -29,7 +29,7 @@
 　服。そういえば――――
 　最初に抱いた疑問が、希海の脳裏に蘇ってくる。
 「それはそうとさ。その格好、どうしたの？」
-　彼女が身にまとう、紙でできたぶかぶかの衣服。いくらロボットといえどもこんな服を着て街中を歩きまわるはずがない。彼女がヒューマノイドであるという衝撃にとらわれていて、希海はそのことをすっかり忘れてしまっていた。
+　彼女が身にまとう、紙でできたぶかぶかの衣服。いくらロボットといえどもこんな服を着て街中を歩きまわるはずがない。彼女がアンドロイドであるという衝撃にとらわれていて、希海はそのことをすっかり忘れてしまっていた。
 「あ……。えっと、これは…………」
 　女の子はごにょごにょと言い淀みながら居心地悪そうに下を向き、やがてそのまま一言も喋らなくなってしまう。どうやら、聞いてはいけない質問をしてしまったらしい。
 「あっ、む、無理に聞くつもりはないんだけどさ。もし何か困ってたら、え、遠慮せずに言ってよ。ロボットだからって気にすることないよ。みんな、じ……自分一人の力じゃ生きてるわけじゃない……んだから」
@@ -49,7 +49,7 @@
 　だが、希海にはどうしてもそれができないのだ。一度告げたさよならを撤回して引き返してくることがかっこ悪いと思っているのか、それとも何度も話しかけて彼女にしつこく思われるのが怖いのか。どちらにせよ下らない理由だ。それは希海も分かっている。分かってはいるが、どうしてもできないのだ。
 　いつだってそうだ。希海にとって、頭で理解することと実際に行動することの間には、次元の違いほどの大きな隔たりがある。そもそも振り返ってみたところで、止まってしまった会話が再び息を吹き返すとは希海には思えない。百歩譲ってそれができたとしても、どこかでまた変なこと言ってしまって気まずくなるのがオチだ。
 　背後で階段を駆け上がる音がした。
-　希海の思考が中断される。タッタタッタッタタタッと、でたらめに演奏したパーカッションのようなリズム。その理由は足場の広さが統一されていないからで、この階段を駆け上がれば誰だってそうなる。たとえそれが科学の粋を集めて作られたヒューマノイドであったとしても。
+　希海の思考が中断される。タッタタッタッタタタッと、でたらめに演奏したパーカッションのようなリズム。その理由は足場の広さが統一されていないからで、この階段を駆け上がれば誰だってそうなる。たとえそれが科学の粋を集めて作られたアンドロイドであったとしても。
 「待ってください！」
 　意を決したような声が強く響き、右腕を強く引っ張られた。
 　今現在、希海が立っている場所はただでさえつまずきやすい、あの欠陥だらけの階段だ。足元のコンクリートはボコボコに歪んでおり、あろうことか下側に向かって微妙な傾斜までついている。
