--- a/hardproblem/1-04.html
+++ b/hardproblem/1-04.html
@@ -34,7 +34,7 @@
 　そんなロボットを一糸まとわぬ姿で引き渡されれば、運搬業者も解体業者もたまったものではないだろう。相手が裸体の少女では日々の仕事もさぞやりづらいに違いない。そんなわけでヒューマノイドを捨てる際には、あの簡易的な服を着せるようにしているのではないか。紙でできているのはコストを低く抑えられるのと、あと、解体の際に容易に破けるようにするためだ。
 『そこから逃げ出したことは覚えています。何かやらなきゃいけないことがあったんですけど、気付いたらここにいて、何をやろうとしていたのかも思い出せなくて……』
 　記憶喪失のロボットなんて初めて聞いた。プロセッサだかメモリだかに不具合が生じているのか、プログラムのバグなのか、それとも自分には想像も付かない難解な要因が複雑に絡み合っているのか。いずれにしても門外漢の希海には手の出しようがない問題である。
-　「そうなんだ」とか「大変だね」とか、そんな愚にもつかない言葉が喉まで出かかった瞬間、希海の脳裏を一つの映像が駆け抜けた。紙でできたぶかぶかな服。襟元からのぞく少女の白い肌と二次元コード。
+　『そうなんだ』とか『大変だね』とか、そんな愚にもつかない言葉が喉まで出かかった瞬間、希海の脳裏を一つの映像が駆け抜けた。紙でできたぶかぶかな服。襟元からのぞく少女の白い肌と二次元コード。
 「一人で暮らしているんですか？」
 　意識が自室に連れ戻された。
 「えっ……あ、何？」
@@ -57,7 +57,7 @@
 　端末を操作して読取画面を呼び出し、女の子に差し出す。
 「えっと、これどうやって使えばいいんですか」
 「もう読取画面は開いてるから、そのままかざせばいいだけ。あ、もしかして服脱いだほうがやりやすいかな。何なら洗面所使う？」
-　数分後。
+　そして数分後。
 　引き戸を隔てた向こう側から声がする。
 「あっ、できましたできました」
 　ようやくか、と希海は小さくため息をついた。
@@ -78,7 +78,7 @@
 　ビンゴ。ウェブで検索するまでもなく電話番号まで載っていた。しかも、ありがたいことにフリーダイヤルである。
 「どうでしたか？」
 　服を着た女の子が洗面所から出てくる。
-「うん。とりあえず番号はゲットできた。あとはここに電話すればいいんだけど……」
+「うん。とりあえず番号は手に入った。あとはここに電話すればいいんだけど……」
 　ただ、気掛かりがひとつあった。
 　この子は廃棄されかかっていたところを逃げ出してきたのだ。廃棄という言葉自体には単に『捨てる』という意味合い以上のものはないのかもしれない。だが、実際にはきちんとパーツごとに解体し、使える部品を再利用したりリサイクル業者に売ったりしているのだろう。今日び、パソコンですら内部の貴金属を再利用しているくらいだ。ましてやこの子は科学技術の粋を集めて作られたヒューマノイド。その体内には金の鉱脈が縦横に走っていると言っても過言ではない。つまり廃品といっても会社にとっては一種の資産なのだ。それくらいは希海にだって容易に想像ができる。
 「あんたさ、逃げ出したことがバレたらまずいんじゃないの？」
@@ -121,14 +121,14 @@
 　3。このような手合いには、こちらから時間を区切ってやるのが賢い。15秒以内に本題が出れば「いりません」、出なければ問答無用で扉を閉める。
 「おいおい困ったな。じゃあ単刀直入に聞かせてもらおうかな」
 　4、5。そして、男は苦笑いをしながらこう告げた。
-「この部屋に、ヒューマノイドの女の子はいないかね」
+「この部屋に、アンドロイドの女の子はいないかね」
 　希海が6秒目のカウントを口にすることはなかった。15秒以内の本題。ある意味、思惑通りの展開である。
 「…………何のことですか？」
 　人間というものは、差し迫った状況になると意外なほど冷静になるものだ。
-「外見は中学生くらいの女の子で、身長は150cmほど。髪の毛は黒のロングヘア、おそらく後ろで2つに縛ってある。ヒューマノイドだから、見た目は人間とほとんど変わらない」
+「外見は中学生くらいの女の子で、身長は150cmほど。髪の毛は黒のロングヘア、おそらく後ろで2つに縛ってある。アンドロイドだから、見た目は人間とほとんど変わらない」
 　間違いない、あの子のことだ。
 「中学生くらい、身長150センチ、黒の二つ結び……」
-　希海は男の言葉をわざとらしく反芻し、記憶の奥底を丹念に調べ上げるふりをする。どうして、女の子がここにいると分かったのか。目の前の男は何者なのか。そんなことを考えている余裕などない。希海は、今この場をやり過ごすことにすべての処理能力を注ぎ込んでいた。
+　希海は男の言葉をわざとらしく反芻し、記憶の奥底を丹念に調べ上げるふりをする。どうして女の子がここにいると分かったのか。目の前の男は何者なのか。そんなことを考えている余裕などない。希海は、今この場をやり過ごすことにすべての処理能力を注ぎ込んでいた。
 「え〜っと……。すいません、やっぱりよく分からないです。何か勘違いでもしてるんじゃないですか」
 　そんなわけだから、事情を知らない女の子が様子をうかがいに玄関までやって来ていたことに気付かなかったのも、仕方のないことだと言える。
 「なんだ。やっぱりいるじゃないか」
@@ -140,7 +140,7 @@
 　心のなかで叫び、睨みつけるも時すでに遅し。当の女の子は、そんな希海の絶望などどこ吹く風といった様子で、頬を赤らめ照れくさそうに笑っている。
 「あー……」
 　希海は天を仰いで次の一手に思案を巡らし始めた。
-　終わった。もはや隠しようがない。かくなる上は「私が購入したロボットです。外見が似ているのは偶然です」とでも言い張ろうか。男が何か言ってきたら知らぬ存ぜぬで通す。占有権は人民に認められた正当な権利なのだから、こちらが渡さぬと主張する以上、法的な手続きも踏まずに無理やりにこの子を奪い去ることはできないはずだ。
+　終わった。もはや隠しようがない。かくなる上は「私が購入したロボットです。外見が似ているのは偶然です」とでも言い張ろうか。男が何か言ってきたら知らぬ存ぜぬで通す。占有権は人民法に記された正当な権利なのだから、こちらが渡さぬと主張する以上、法的な手続きも踏まずに無理やりにこの子を奪い去ることはできないはずだ。
 （こういうの自力救済の禁止って言うのよねえ。私って物知り）
 「あれ？　私、この人見覚えがあります」
 　女の子が、スーツの男を見てぽつりと呟いた。見覚え？　まさか解体業者だろうかと希海は訝しむ。男は、そんな希海の視線になど目もくれずに、表情をかすかに曇らせた。
