住所の修正

--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -102,12 +102,12 @@
 「彼女がかつての主人からもらった名前だ」
 
 　ハルカが出荷されたのは、今からもう2年も前になる。
-　購入者は<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンに住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
+　購入者は天分市に住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
 　どうしてそんなことまで東が知っているのかというと、アンドロイドの購入に際してSDRはオーナーとなる人間の身辺調査を行なっているからだ。
 　アンドロイドというものはかなり高額で、高級外車が1台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがアンドロイドを正しく利用するのかという点の見極めだ。
 　よく知られている通り、アンドロイドとは人間を模すことを最大の目的として設計されている。どれくらい人間を模すかは企業や製品によってまちまちだが、SDRは特にその傾向が強く、サマリー17シリーズなどはじっくりと観察でもしなければ容易にロボットだとは分からない。それだけ人間に似ているのだから、アンドロイドを使って良からぬことを企む輩も当然、少なからず出てくる。
 　代表的な例が、アンドロイドに対する性行為の強要だ。オーナー自身による暴行から、第三者に対する売春行為の強要まで含めると、それこそ数えきれないほどの件数が世界中で報告されている。また、アンドロイドを犯罪に利用するケースもこれに負けじと多い。軽微なものでは万引きや賭博現場の見張り程度なのだが、深刻なものになると、過去にはロボットを使った法廷での偽証事件すら起きている。SDRはこのような行為を「アンドロイドに対する反倫理的行為」として事細かに定めており、オーナーは契約締結時に倫理規定を順守する旨の誓約書を提出しなければならない。
-　もちろん、クライアントはこの誓約書にしっかりとサインをした。仕事で忙しかったはずの息子のサインがあるのは、父親が彼のアパートまでサインをもらいに行ったのだろう。几帳面な彼らの様子に、契約担当者は「この人達なら大丈夫」と思ったに違いない。実際、身辺調査では大きな問題は散見されなかったし、彼らが倫理規定に違反したいう事実は今日においても確認されていない。
+　もちろん、クライアントはこの誓約書にしっかりとサインをした。仕事で忙しかったはずの息子のサインがあるのは、父親が彼のアパートまでサインをもらいに行ったのだろう。几帳面な彼らの様子に、契約担当者は「大丈夫だろう」と思ったに違いない。実際、身辺調査では大きな問題は散見されなかったし、彼らが倫理規定に違反したいう事実は今日においても確認されていない。
 　そして東が第一報を聞いたのは、つい1週間ほど前のことだ。
 　自殺だった。
 　長い間連絡が取れないことを不審に思った父親が、息子のアパートを尋ねたところを発見した。警察の鑑定によると死亡したのは1ヶ月ほど前。方法はドアノブとタオルを使った首吊りで、遺書は見つからなかったという。自殺の原因は今も不明だが、両親は仕事での過労が原因とみて、息子が務めていた会社を相手に訴訟を起こすつもりらしい。
@@ -122,7 +122,7 @@
 　最終メンテから既に2ヶ月ほどが経っていたため、彼女のデータはほとんど消えてしまっていると予測されていたし、何より所有者である父親がそのまま眠らせてやってくれと言っていた。息子に寄り添って事切れる彼女の姿に、両親としても思うところがあったのだろう。棺にはハルカの髪を<ruby>一房<rp>(</rp><rt>ひとふさ</rt><rp>)</rp></ruby>切り分けたものが入れられ、主人とともに一足先に天へと帰っていった。そして残されたハルカも、数週間後には系列会社の手によって解体されることが決まり、あとはうす暗い廃品置き場で滅びの時をただひたすらに待ち続けるはずだった。
 　そして、それからさらに数日後。
 　「廃品置き場からハルカが居なくなった」という報告を部下から受けたとき、東は耳を疑った。機能を停止したと思っていたロボットが蘇りひとりでに歩き出したというのでは、まるでゾンビではないか。最初は誰かが勝手にどこかへ移動させたのだと思い、廃品置き場をくまなく探したが一向に見つからない。
-　昼食を抜いて事業所内を端から端まで探し、まさか思って位置情報を検索してみて今度は我が目を疑った。ハルカの位置情報デバイスが動作しているのだ。モニタ上のカーソルが指し示す住所は<ruby>真浜<rp>(</rp><rt>まはま</rt><rp>)</rp></ruby>区<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>洞<ruby>始新台<rp>(</rp><rt>ししんだい</rt><rp>)</rp></ruby>1丁目。事業所から直線距離にして約5kmほど離れた場所である。
+　昼食を抜いて事業所内を端から端まで探し、まさか思って位置情報を検索してみて今度は我が目を疑った。ハルカの位置情報デバイスが動作しているのだ。モニタ上のカーソルが指し示す住所は真浜区真揺洞漸新台2丁目。事業所から直線距離にして6kmほど離れた場所である。
 　東は情報端末を片手に大慌てで車を出した。停止したFIANCの自発的再起動。聞いたことがないわけではなかったが、東とて数本の論文に引用されているのを見たことがある程度で、今の今まですっかり頭から抜けていた。実際に自分が出くわさなければ二度と思い出すこともなかっただろう。それくらい例外的な現象だ。
 　東がGPSの位置情報を頼りにたどり着いたのは3階建てのボロアパートだった。端末が指し示すハルカの場所は建物の一番東の部屋。下から順にチャイムを鳴らしていくと、1階は無人、2階には40代の中年男性、3階には内気なくせに負けん気だけは人一倍強そうな女子大生が住んでいて、ここから先の話は希海もよく知るところである。
 </div>
