住所再変更

--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -102,7 +102,7 @@
 「彼女がかつての主人からもらった名前だ」
 
 　ハルカが出荷されたのは、今からもう2年も前になる。
-　購入者は天分市に住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
+　購入者は七園区に住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
 　どうしてそんなことまで東が知っているのかというと、アンドロイドの購入に際してSDRはオーナーとなる人間の身辺調査を行なっているからだ。
 　アンドロイドというものはかなり高額で、高級外車が1台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがアンドロイドを正しく利用するのかという点の見極めだ。
 　よく知られている通り、アンドロイドとは人間を模すことを最大の目的として設計されている。どれくらい人間を模すかは企業や製品によってまちまちだが、SDRは特にその傾向が強く、サマリー17シリーズなどはじっくりと観察でもしなければ容易にロボットだとは分からない。それだけ人間に似ているのだから、アンドロイドを使って良からぬことを企む輩も当然、少なからず出てくる。
