--- a/picture/nozomi04.html
+++ b/picture/nozomi04.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
   <title>nozomi04</title>
+  <link rel="shortcut icon" href="img/icon.png" type="image/png">
 </head>
 
 <body>
 
   <div class="logo">
-    <a href="../"><img src="../img/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <a href="../"><img src="../img/sitelogo.jpg
+    " alt="真揺中心ロゴ"></a>
   </div>
   
   <div class="image">
