--- a/picture/fm03.html
+++ b/picture/fm03.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
   <title>fm03</title>
+  <link rel="shortcut icon" href="img/icon.png" type="image/png">
 </head>
 
 <body>
