アドレス修正

--- a/picture/nozomi07.html
+++ b/picture/nozomi07.html
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <img src="nozomi07.png" alt="">
+    <img src="image/nozomi07.png" alt="">
   </div>
   
   <div class="picturetitle">
