【重要】東のセリフとSDRの諸描写を改定

--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -106,7 +106,8 @@
 　どうしてそんなことまで東が知っているのかというと、アンドロイドの購入に際してSDRはオーナーとなる人間の身辺調査を行なっているからだ。
 　アンドロイドというものはかなり高額で、高級外車が1台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがアンドロイドを正しく利用するのかという点の見極めだ。
 　よく知られている通り、アンドロイドとは人間を模すことを最大の目的として設計されている。どれくらい人間を模すかは企業や製品によってまちまちだが、SDRは特にその傾向が強く、サマリー17シリーズなどはじっくりと観察でもしなければ容易にロボットだとは分からない。それだけ人間に似ているのだから、アンドロイドを使って良からぬことを企む輩も当然、少なからず出てくる。
-　代表的な例が、アンドロイドに対する性行為の強要だ。オーナー自身による暴行から、第三者に対する売春行為の強要まで含めると、それこそ数えきれないほどの件数が世界中で報告されている。また、アンドロイドを犯罪に利用するケースもこれに負けじと多い。軽微なものでは万引きや賭博現場の見張り程度なのだが、深刻なものになると、過去にはロボットを使った法廷での偽証事件すら起きている。SDRはこのような行為を「アンドロイドに対する反倫理的行為」として事細かに定めており、オーナーは契約締結時に倫理規定を順守する旨の誓約書を提出しなければならない。
+　代表的な例が、アンドロイドに対する性行為の強要だ。オーナー自身による暴行から、第三者に対する売春行為の強要まで含めると、それこそ数えきれないほどの件数が世界中で報告されている。また、アンドロイドを犯罪に利用するケースもこれに負けじと多い。軽微なものでは万引きや賭博現場の見張り程度なのだが、深刻なものになると、過去にはロボットを使った法廷での偽証事件すら起きている。このようなアンドロイドにまつわる様々な問題は世界規模で発生しており、先進国を中心に規制の強化が叫ばれている状況だ。
+　アジア屈指のアンドロイドメーカーであり常に批判の矢面に立たされてきたSDRも近頃はそういった評判を気にしてか、つい数年前に新たな自主規制を導入した。それが「アンドロイド利用に関する倫理規定」である。規定には性行為の強要や犯罪用途への利用など、アンドロイドの利用に際して行ってはならない行為が事細かに定められており、オーナーは契約締結時にこの規定を順守する旨の誓約書を提出しなければならない。
 　もちろん、クライアントはこの誓約書にしっかりとサインをした。仕事で忙しかったはずの息子のサインがあるのは、父親が彼のアパートまでサインをもらいに行ったのだろう。几帳面な彼らの様子に、契約担当者は「大丈夫だろう」と思ったに違いない。実際、身辺調査では大きな問題は散見されなかったし、彼らが倫理規定に違反したいう事実は今日においても確認されていない。
 　そして東が第一報を聞いたのは、つい1週間ほど前のことだ。
 　自殺だった。
