--- a/hardproblem/1-06.html
+++ b/hardproblem/1-06.html
@@ -25,7 +25,7 @@
 　そしてある朝、彼女が目を覚ますと、その大好きだった人が冷たくなっていたのである。そのときの様子を考えると、希海の胸はいっそう強く締め付けられた。
 　彼女は……、ハルカはそのときどうしたのだろう。作り物の涙を流して子供のように泣いたのだろうか。それとも、冷たくなった主人の姿を無表情に眺めながら、プロセッサを必死に動かしていたのだろうか。いずれにせよ悲しい光景だと希海は思う。
 （あの子、これからどうなるのかな……）
-　機能に問題はないという話だったので、また新しい主人のもとで第二の人生を送ることになるのだろうか。それならば記憶を失ったのはある意味、幸せなのかもしれない。希海が彼女の様な体験をすればもう二度と立ち直れないだろうし、仮に立ち直れても一生トラウマを引きずって生きていくことになるに違いない。自らの歩みを止めてしまうような記憶は、綺麗に忘れてしまった方が当人のためだ。
+　機能に問題はないという話だったので、また新しい主人のもとで第二の人生を送ることになるのだろうか。それならば記憶を失ったのはある意味、幸せなのかもしれない。自分が彼女の様な体験をすればもう二度と立ち直れないだろうし、仮に立ち直れても一生トラウマを引きずって生きていくことになるに違いない。自らの歩みを止めてしまうような記憶は、綺麗に忘れてしまった方が当人のためだ。
 　でも、
 ――私は、それでも構いません
 　その一方で、彼女ならそんな過去も強く越えていけるような、そんな気が希海にはしていた。だって彼女は……、
@@ -78,12 +78,12 @@
 　思ってもみなかった話に希海は青ざめる。彼女は記憶を失っただけで、それ以外に何も問題はないのだと思っていた。いや、実際にその通りであり、記憶の欠落以外はまったくの正常だ。だが、その欠落した記憶こそが唯一にして最大の問題点だったのである。
 「では出荷をしないで、ここの施設で一生を過ごせるのかというとこれも難しい。アンドロイドの維持費はオーナー負担分だけでも最低月5万。潜在的に企業が負担している分まで含めるとこれの2から4倍だな。いくら世界に名だたるSDRといえども、こんな無駄な費用をポンと払ってくれるほど太っ腹じゃない。ちなみに多くのアンドロイドは無停止システムだから、電源を切って置いておくことはできんぞ。スイッチをOFFにした瞬間から排熱機構がストップして情報の揮発による脳死へと一直線だ」
 「……それで私ですか」
-「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに社員の私なら、割引価格で購入できる」
+「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに言葉は悪いがハルカは“中古品”だ。価格的には新品の半分以下だし、その上社員の私なら、割引価格で購入できる」
 　確かに東の言い分には理があるように思える。思えるが、希海がハルカのオーナーになるという帰結に至るには、まだ十分な<ruby>理屈<rp>(</rp><rt>ロジック</rt><rp>)</rp></ruby>があるとは言えない。
 「それなら、私よりもっと適した人がここいるじゃないですか」
 「ん？　私かい？」
 　そう。今までの話は要するに、彼女の過去を知っており彼女に理解を示す人物が、新しいオーナーになるべきだということだった。だったら、わざわざどこの馬の骨ともしらない希海よりも、この男が自ら彼女を買い上げて、オーナーになればいいではないか。
-「もちろんそれも考えたさ。だが私は多忙な身でね。中々彼女に構ってやれないんだ。2日3日家に帰らないこともざらにあるような人間が主人だと、アンドロイドがかわいそうだろ？　それに近頃、健康診断の結果が<ruby>芳<rp>(</rp><rt>かんば</rt><rp>)</rp></ruby>しくなくてね。何かの拍子でぽっくりと逝ってしまって、彼女を2度も同じ目に合わせたくない」
+「もちろんそれも考えたさ。だが私は多忙な身でね。中々彼女に構ってやれないんだ。一人暮らしで2日3日家に帰らないこともざらにあるような人間が主人だとアンドロイドがかわいそうだろ？　それに近頃、健康診断の結果が<ruby>芳<rp>(</rp><rt>かんば</rt><rp>)</rp></ruby>しくなくてね。何かの拍子でぽっくりと逝ってしまって、彼女を2度も同じ目に合わせたくない」
 　解せなかった。
 　もちろん希海とて頭では彼の話を理解している。だが、世界に100億人、ここ近畿市だけでも1800万近い人間がいるというのに、なぜ希海なのか。まるで自分だけ置いていかれたような気分だった。
 　1800万人の中から1人、また1人と抜けていき、最後に残ったのが希海と東だ。そしてその東も今しがた抜けてしまい、女の子に対する責任と使命感が希海の肩に重くのしかかる。
@@ -100,7 +100,9 @@
 　話の意図が見えず希海は困惑する。確かにあのとき女の子をかばおうと嘘を付いた。だがそれが一体何なのか。
 「どうして君があんなことをしたのか、私はすぐには分からなかった。だがその直後、彼女が倒れたときの君の困惑ぶりを見て悟ったよ。ああそうか、この子は私から彼女を守ろうとしていたんだな、ってね。私を公安か何かと勘違いしていて、か弱いロボットの女の子が私に連れ去られると思ったんだろう」
 　希海は拳を握りしめたまま押し黙っている。
-「君にあの話をした理由はそれだよ。彼女のことを真剣に案じていた君だからこそ、聞いてもらいたいと思ったんだ。引き取ってもらうことを思いついたのはその後さ。……信じてもらえないかもしれないがね」
+「確かにこれは私の仕事だ。いや、本来は私の仕事ですらないのかもしれない。諸機能に問題が散見されない以上、後のこと――彼女が次の主人と上手くやっていけるかなんて本来なら無視してもいい事柄だ。彼女と新しい主人の間で何かあっても、担当者が頭を下げて新しい機体を用意すれば済む話だからね。だが君はただ一人、そんな彼女のことを気にかけていた。彼女を守るために小芝居のひとつを打ち、私の話にころころと顔色を変えてみせた」
+　そう言って東はずいぶんと前に燃え尽きてしまったタバコを灰皿に投げ入れる。
+「青山君にあの話をした理由はそれだよ。彼女のことを真剣に案じていた君だからこそ、聞いてもらいたいと思ったんだ。引き取ってもらうことを思いついたのはその後さ。……信じてもらえないかもしれないがね」
 　胸のあたりから何かがこみ上げてくる。目頭がかすかに熱くなっていくのを感じた。
 　私にできることなら。
 　ついさっき希海が言った言葉。自分で言っておきながら「できることなんてあるんだろうか」という疑念が脳裏を離れなかった。
