リンク修正

--- a/picture/norika02.html
+++ b/picture/norika02.html
@@ -18,7 +18,7 @@
   </div>
   
   <div class="picturetitle">
-    <a href="http://mayuragicenter.yu-yake.com/matomaranai_character.html">紀佳</a>     
+    <a href="http://ncode.syosetu.com/n0471bm/">紀佳</a>     
   </div>
   
   <div class="caption">
