ヒューマノイド→アンドロイドに修正

--- a/hardproblem/1-04.html
+++ b/hardproblem/1-04.html
@@ -29,10 +29,10 @@
 『私……気付いたらこの町にいて……それで』
 『どこで何をしてたか、どうしてここにいるのか、とにかく何も覚えてないんです……』
 　女の子はそう言った。最初は階段から落ちた衝撃でデータが飛んでしまったのかと思ったが、詳しく話を聞いてみるとどうもそうではないらしかった。
-『目が覚めたら、見たこともない場所にいました。暗くてじめじめしたところ……たぶん倉庫だと思います。そこには私と同じヒューマノイドがたくさんいて、みんな電源が落ちたり壊れたりしていました』
-　倉庫の中にいるたくさんの壊れたヒューマノイド……。おそらく、廃棄されたロボットの一時管理所だろう。つまり、この女の子は捨て犬ならぬ捨てロボットというわけだ。それなら女の子が着ている変な服も説明がつく。あの服は廃棄前のロボットに着せる、いわば死に装束のようなものなのかもしれない。
-　古くなったパソコンに服を着せて捨てたりしないのと同じで、いらなくなったロボットに服を着せようとする者などまずいない。だが、この子の場合はヒューマノイドである。胸の刻印と、あといくらかの差異を除けば、その外見は人間の少女のそれとなんら変わるところはない。きめ細やかな柔肌も、小さな肩の曲線も人間と同じ。胸の膨らみだって精巧に作り込まれている。
-　そんなロボットを一糸まとわぬ姿で引き渡されれば、運搬業者も解体業者もたまったものではないだろう。相手が裸体の少女では日々の仕事もさぞやりづらいに違いない。そんなわけでヒューマノイドを捨てる際には、あの簡易的な服を着せるようにしているのではないか。紙でできているのはコストを低く抑えられるのと、あと、解体の際に容易に破けるようにするためだ。
+『目が覚めたら、見たこともない場所にいました。暗くてじめじめしたところ……たぶん倉庫だと思います。そこには私と同じアンドロイドがたくさんいて、みんな電源が落ちたり壊れたりしていました』
+　倉庫の中にいるたくさんの壊れたアンドロイド……。おそらく、廃棄されたロボットの一時管理所だろう。つまり、この女の子は捨て犬ならぬ捨てロボットというわけだ。それなら女の子が着ている変な服も説明がつく。あの服は廃棄前のロボットに着せる、いわば死に装束のようなものなのかもしれない。
+　古くなったパソコンに服を着せて捨てたりしないのと同じで、いらなくなったロボットに服を着せようとする者などまずいない。だが、この子の場合はアンドロイドである。胸の刻印と、あといくらかの差異を除けば、その外見は人間の少女のそれとなんら変わるところはない。きめ細やかな柔肌も、小さな肩の曲線も人間と同じ。胸の膨らみだって精巧に作り込まれている。
+　そんなロボットを一糸まとわぬ姿で引き渡されれば、運搬業者も解体業者もたまったものではないだろう。相手が裸体の少女では日々の仕事もさぞやりづらいに違いない。そんなわけでアンドロイドを捨てる際には、あの簡易的な服を着せるようにしているのではないか。紙でできているのはコストを低く抑えられるのと、あと、解体の際に容易に破けるようにするためだ。
 『そこから逃げ出したことは覚えています。何かやらなきゃいけないことがあったんですけど、気付いたらここにいて、何をやろうとしていたのかも思い出せなくて……』
 　記憶喪失のロボットなんて初めて聞いた。プロセッサだかメモリだかに不具合が生じているのか、プログラムのバグなのか、それとも自分には想像も付かない難解な要因が複雑に絡み合っているのか。いずれにしても門外漢の希海には手の出しようがない問題である。
 　『そうなんだ』とか『大変だね』とか、そんな愚にもつかない言葉が喉まで出かかった瞬間、希海の脳裏を一つの映像が駆け抜けた。紙でできたぶかぶかな服。襟元からのぞく少女の白い肌と二次元コード。
@@ -81,7 +81,7 @@
 　服を着た女の子が洗面所から出てくる。
 「うん。とりあえず番号は手に入った。あとはここに電話すればいいんだけど……」
 　ただ、気掛かりがひとつあった。
-　この子は廃棄されかかっていたところを逃げ出してきたのだ。廃棄という言葉自体には単に『捨てる』という意味合い以上のものはないのかもしれない。だが、実際にはきちんとパーツごとに解体し、使える部品を再利用したりリサイクル業者に売ったりしているのだろう。今日び、パソコンですら内部の貴金属を再利用しているくらいだ。ましてやこの子は科学技術の粋を集めて作られたヒューマノイド。その体内には金の鉱脈が縦横に走っていると言っても過言ではない。つまり廃品といっても会社にとっては一種の資産なのだ。それくらいは希海にだって容易に想像ができる。
+　この子は廃棄されかかっていたところを逃げ出してきたのだ。廃棄という言葉自体には単に『捨てる』という意味合い以上のものはないのかもしれない。だが、実際にはきちんとパーツごとに解体し、使える部品を再利用したりリサイクル業者に売ったりしているのだろう。今日び、パソコンですら内部の貴金属を再利用しているくらいだ。ましてやこの子は科学技術の粋を集めて作られたアンドロイド。その体内には金の鉱脈が縦横に走っていると言っても過言ではない。つまり廃品といっても会社にとっては一種の資産なのだ。それくらいは希海にだって容易に想像ができる。
 「あんたさ、逃げ出したことがバレたらまずいんじゃないの？」
 「あ……」
 　女の子の顔が曇る。
