ヒューマノイド→アンドロイドに修正

--- a/hardproblem/2-03.html
+++ b/hardproblem/2-03.html
@@ -61,13 +61,13 @@
 「はあ、それはまた大変ですねえ」
 「でも確実に良くなってきてますから。ね、理子？」
 「はっ……はい！」
-　希海がこんな嘘をつく理由は、リコがいらぬ犯罪に巻き込まれるのを避けるためである。高級外車と同じくらいの価格で、しかも自律行動をおこなうヒューマノイドは犯罪者にとって格好の標的だ。ベンツやアルファロメオがキーを挿したままトコトコと歩いている姿を想像すればよい。加えてそのベンツは、年頃の女の子と寸分たがわぬ外見をしているにも関わらず、法律上も車と同じ動産として扱われる。つまり、無理やり連れ去っても誘拐罪ではなく窃盗罪が適用されるし、殺してしまっても殺人罪には問われることはない。
+　希海がこんな嘘をつく理由は、リコがいらぬ犯罪に巻き込まれるのを避けるためである。高級外車と同じくらいの価格で、しかも自律行動をおこなうアンドロイドは犯罪者にとって格好の標的だ。ベンツやアルファロメオがキーを挿したままトコトコと歩いている姿を想像すればよい。加えてそのベンツは、年頃の女の子と寸分たがわぬ外見をしているにも関わらず、法律上も車と同じ動産として扱われる。つまり、無理やり連れ去っても誘拐罪ではなく窃盗罪が適用されるし、殺してしまっても殺人罪には問われることはない。
 「親御さんは今日お仕事ですか」
 「ええ、まあ。そんなとこです」
 　嘘を付くときだけ急に饒舌になる自分が少し嫌だった。
 （まあでも……何かあってからじゃ遅いしね）
 　前回のメンテナンス時に東から聞いた話が脳裏をよぎる。
-　なんでも誘拐されたヒューマノイドの行く末は、大きく分けて3通りあるそうな。東曰く、『大吉を引く程度に運が良ければ、転売の末に新しい主人のもとで第二の人生を送ることになる』、『中吉や小吉だと、ピンクの床屋で春を売ることになる』、『凶だとスナッフビデオに出演させられ、生きたままパーツを剥ぎ取られる』。いささか杞憂かも知れないが、事が起こってからでは遅いのだ。
+　なんでも誘拐されたアンドロイドの行く末は、大きく分けて3通りあるそうな。東曰く、『大吉を引く程度に運が良ければ、転売の末に新しい主人のもとで第二の人生を送ることになる』、『中吉や小吉だと、ピンクの床屋で春を売ることになる』、『凶だとスナッフビデオに出演させられ、生きたままパーツを剥ぎ取られる』。いささか杞憂かも知れないが、事が起こってからでは遅いのだ。
 　そうこうしている内にタクシーは目的の海水浴場に到着する。
 　運賃の支払いを済ませてドアを開けると一層強い海の香りがした。
 「それじゃあ、楽しんでいってくださいね」
