--- a/hardproblem/3-05.html
+++ b/hardproblem/3-05.html
@@ -49,7 +49,7 @@
 「重要証人？」
 「小春と懇意にしていた少女でね。現在ポーランドにいるとのことだ」
 　新しい証言を元に作られた調書の内容はこうである。
-　なんでも小春は、代わり映えのない日常に嫌気がさしていたらしい。毎日、大して好きでもない作業の繰り返し。見知った街の風景と見知った店、見知った客。しかも小春は仕事の手伝いをするために購入されたヒューマノイドだ。オーナーの仕事が続く限り、一生そんな毎日を繰り返さなければならない。見知らぬ世界を体験することも、新たな出会いに心躍らせることも、叶わぬ願いに近い。
+　なんでも小春は、代わり映えのない日常に嫌気がさしていたらしい。毎日、大して好きでもない作業の繰り返し。見知った街の風景と見知った店、見知った客。しかも小春は仕事の手伝いをするために購入されたアンドロイドだ。オーナーの仕事が続く限り、一生そんな毎日を繰り返さなければならない。見知らぬ世界を体験することも、新たな出会いに心躍らせることも、叶わぬ願いに近い。
 　そして、そんな小春にささやかな非日常を見せてくれる存在が、近所に住む高校生の少女だったのだ。両親の都合で色んな国を転々としていた少女は、よく小春に海外の話を聞かせてやっていたらしい。抜け出すことのできない灰色の日常を生きる小春にとって、少女の話は世界に彩りを与えてくれるものとして写ったに違いない。
 　だが、そんなふたりの間にも別れはやってくる。
 　少女の引越しだ。
@@ -61,14 +61,14 @@
 「まったく、これからはちゃんと調書作ってくださいよね」
 「ははは、すまんすまん。その調子だと向こうで見当違いのことを小春に言ってきょとんとされてしまったのかな」
 「ええ、その通りです。大体おかしいと思ってたんですよ。ロボットが人に恋するなんて」
-「おいおい聞き捨てならんな。ヒューマノイドだって恋愛くらいするさ」
+「おいおい聞き捨てならんな。アンドロイドだって恋愛くらいするさ」
 「……本気で言ってるんですか？」
 　希海の鋭い視線が東を捉えた。
 　和やかになりかけていた場の空気が、一瞬にして凍りつく。
-「……ああ、本気さ。逆に聞きたいね。どうしてヒューマノイドに恋愛ができないと思うのか」
+「……ああ、本気さ。逆に聞きたいね。どうしてアンドロイドに恋愛ができないと思うのか」
 　東は自らを睨みつける希海を意外そうな目で見つめる。だが飄々とした態度を相変わらずだ。
 「ロボットに恋愛感情を抱かせる理由がありません」
-「理由？　理由ならあるさ。我々開発者が『ヒューマノイドも恋愛感情を持つべき』だと思っている」
+「理由？　理由ならあるさ。我々開発者が『アンドロイドも恋愛感情を持つべき』だと思っている」
 「答えになってません。そもそも恋愛感情なんて個体の維持や知能の形成にはまったく関係のないことですよね」
 　希海は追及の手を緩めない。突然、敵意をあらわにされた東の表情にはわずかばかりの困惑が見えた。真意を計りかねているのだろう。
 「個体維持に関しては確かに、必要のない機能だね。だが――」
@@ -84,9 +84,9 @@
 　東はやれやれと言わんばかりに小さくため息をつく。
 「これは誠実に答えないと、大変なことになりそうだな」
 　あいも変わらず飄々とした態度が希海の気に障る。またぞろお得意の口先三寸でごまかすつもりなのだろうか。だが、今回ばかりは希海も引く気はない。騙されるものか。明快で納得の行く答えを聞くまで追及の手を緩めてはだめだと自らに言い聞かせる。
-「では事実の確認からしておこうか。まず、SDRがかつて性産業用途のヒューマノイドを生産していたこと、および現在も関連会社でその事業を続けていること。これは君の指摘する通り、紛れもない事実だ」
+「では事実の確認からしておこうか。まず、SDRがかつて性産業用途のアンドロイドを生産していたこと、および現在も関連会社でその事業を続けていること。これは君の指摘する通り、紛れもない事実だ」
 　所詮は誰が書いたのかも分からぬネットの情報だ。ひょっとすると全くのデマか都市伝説なのかもしれない。かすかに残っていたそんな可能性は無情にも棄却され、希海の鼓動がまた少しその速さを増していく。
-「だが君の推測は違う。ヒューマノイドに恋愛感情を持たせている理由も、リコに性器を実装している理由も、決して物好きな“顧客”のニーズを満たすためではない」
+「だが君の推測は違う。アンドロイドに恋愛感情を持たせている理由も、リコに性器を実装している理由も、決して物好きな“顧客”のニーズを満たすためではない」
 　それきた。東のやりそうな論法だ。
 　君の認識は部分的に正しい、だが、一部に重大な瑕疵があり、それが原因で君はまちがった結論を導き出してしまっている。この男はそう言いたいのだ。希海は東の言葉にいっそう強く注意を向ける。自分はいま詐欺師か、さもなくば手品師と話をしているのだ。その言葉の裏に隠された巧妙な詭弁を見抜けなければ、いとも簡単に騙されてしまう。そんな気がした。
 「そもそも関連企業で生産しているセクサロイドに、恋愛感情を始めとする、高度な感情機能は実装されていない。これは倫理的な理由からだ。彼女らはただ、自らを律する記号的なプログラムに従って状況を判断し“作業”を行うのみだ」
@@ -99,7 +99,7 @@
 「青山君は、サマリー17シリーズの設計思想をご存知かな？」
 　東がおもむろに希海の方を向き直った。突然の問いかけに希海は意表を突かれる。
 「話を逸らさないでください」
-「おいおい心外だな。逸らしてなんかいないさ。なぜ我々の作ったヒューマノイドが恋愛感情を抱くことができるのか。なぜ性器にいたるまで細部に人間を模しているのか。その答えに繋がることなんだよ」
+「おいおい心外だな。逸らしてなんかいないさ。なぜ我々の作ったアンドロイドが恋愛感情を抱くことができるのか。なぜ性器にいたるまで細部に人間を模しているのか。その答えに繋がることなんだよ」
 　サマリー17シリーズ。リコや小春の正式名称だ。確かふたりとも『第4世代』とか言われていたのだが、その意味合いすら希海は知らない。
 「サマリー17シリーズの設計思想はね……。人間を作ることなんだ」
 　詭弁だ。
@@ -111,7 +111,7 @@
 「……脳ですか」
 「ご名答。とは言え、脳と非常に近しい動作をするハードウェアの開発は現代でも一応の成功を見ている。ほら、一度話したことがあるだろう？　FIANCがそれだよ。だが難しいのはそこじゃない。一番の問題は、ハードウェアではなくソフトウェアをどう開発するかなんだ」
 　それは希海にも分かる。人間の思考回路や神経伝達をフローチャートにすることが、いかに途方も無いことか。
-「だから我々は育てることにしたんだ。ヒューマノイドを、文字通り赤ん坊の頃からね。もちろんヒューマノイドは機械だ。人間のように成長しない。身体の成長もできることなら実装したいが、技術的にはまったくその目処は立っていないのでね。だからここで言う『育てる』とは精神の育成。つまり学習のことを指す。ここまではいいかな？」
+「だから我々は育てることにしたんだ。アンドロイドを、文字通り赤ん坊の頃からね。もちろんアンドロイドは機械だ。人間のように成長しない。身体の成長もできることなら実装したいが、技術的にはまったくその目処は立っていないのでね。だからここで言う『育てる』とは精神の育成。つまり学習のことを指す。ここまではいいかな？」
 　ひとしきり話すと東はニヤリと笑う。まるで希海の理解力を試しているかのようだった。
 「ええ大丈夫ですよ。続けてください」
 　何てことはない。つまりリコたちは学習によって知能を獲得したのだ。単にそれだけの話である。それだけなら前にも一度ほのめかされたことがあったので、驚くようなことではない。
@@ -127,9 +127,9 @@
 「だって、恋愛感情ってそんなに大切なものだとは思えません」
 「そんなことはない。現に恋愛をテーマにした歌や演劇はそれこそ古代から数えきれぬほど作られてきているじゃないか。恋愛……もっと言えばその根底にある性欲は、三大欲求と呼ばれるもののなかでも、とりわけ人の社会性と密接な関わりを持っている。これを理解せずしてどうして人間に近づくことができるんだい？」
 　膝が震え出した。希海はそれを隠すために、爪が食い込むほどに手を握りしめる。
-「じゃあ何ですか！？　リコや他のヒューマノイドが心ないオーナーの慰みものにされてしまっても、構わないとでも言うんですか！？」
+「じゃあ何ですか！？　リコや他のアンドロイドが心ないオーナーの慰みものにされてしまっても、構わないとでも言うんですか！？」
 　焦る気持ちが空回りし、とんちんかんな言葉が口をついて飛び出してしまう。もう無茶苦茶だ。それは希海も分かっている。だが、何か言わずにはいられない。反論して、東の話を止めなければ。それだけだった。
-「おいおい誰もそんなことは言ってないよ。それに青山君も知ってるだろう？　ヒューマノイドに対する性行為の強要は倫理規定違反だ。もっとも、双方の同意があった場合は別だがね」
+「おいおい誰もそんなことは言ってないよ。それに青山君も知ってるだろう？　アンドロイドに対する性行為の強要は倫理規定違反だ。もっとも、双方の同意があった場合は別だがね」
 　心臓が跳ねる。
 「ふ、ふざけないでください！」
 　もう嫌だった。お前の言いたいことは分かったからもうやめてくれ。これ以上、私に嫌なものを見せないでくれ。汚い話を聞かせないでくれ。
@@ -142,7 +142,7 @@
 「……ざけんじゃないわよ」　
 　東が去った待合室に、希海のこぼした不満が響いた。ドリンクバーのコンプレッサーがそれに呼応するかのように低い唸り声を上げる。
 「何が人間よ」
-　結局はそこなのかも知れない。東の言っていることは一から十まで理解できる。納得がいかないのは、その前提だ。ヒューマノイドをどこまでも人間に近づけるというその思想が、希海にはどうしても受け入れられなかった。　
+　結局はそこなのかも知れない。東の言っていることは一から十まで理解できる。納得がいかないのは、その前提だ。アンドロイドをどこまでも人間に近づけるというその思想が、希海にはどうしても受け入れられなかった。　
 「そんなに人間が作りたきゃ……さっさと結婚でもすればいいのよ」
 　吐き出した言葉は、待合室の静寂の飲まれて消えた。
 </div>
