--- a/hardproblem/3-06.html
+++ b/hardproblem/3-06.html
@@ -48,7 +48,7 @@
 　不意にリコが声を上げた。心臓が飛び出そうになる。
 　リコは少し表情を曇らせると、やがて消しゴムを手に取り、ノートに書かれた数式を丁寧に消し始めた。
 （そんなこと……）
-　そんなことあるはずがない。たとえ他のヒューマノイドがそうであったとしても、この子は別だ。リコは情動だとか怠惰だとか、そういうものに振り回されるような子ではない。
+　そんなことあるはずがない。たとえ他のアンドロイドがそうであったとしても、この子は別だ。リコは情動だとか怠惰だとか、そういうものに振り回されるような子ではない。
 　どうしてそう言えるんだ？
 　心の奥底の声が告げる。そんなものは希海の思い込みだ。人が見た目や言動で判断できないだなんて、あまりに自明なことである。だったらどうする？　どうすればいい？
 ――確かめればいい
