--- a/hardproblem/3-07.html
+++ b/hardproblem/3-07.html
@@ -74,9 +74,9 @@
 「私は昔のことを覚えていませんけど、多分この疑問は生まれたときから持ち続けていたんだと思います」
 　そう言って目を見開き、憂いとも諦めともつかぬ顔で遠くを見つめるリコ。あの顔だ、と希海は思った。
 「ねえ希海さん。どうして人間は私達を作ったんでしょう」
-　自分たちが作られた理由、自らの存在理由を問いかけるヒューマノイド。その姿は、人間が神に問いを投げかけるのに似ていた。
+　自分たちが作られた理由、自らの存在理由を問いかけるアンドロイド。その姿は、人間が神に問いを投げかけるのに似ていた。
 「それは……」
-　リコたちヒューマノイドが作られた理由。東は、人間を作ることが目的だと言っていたけど、おそらくそれはリコの求めている答えではないのだろう。リコが投げかけているのは、なぜ人間の模造品を作ろうと思ったかという、もっと根源的な問いだ。もしも神が、全能の神とやらがこの宇宙の外にいるならば、彼は人を作った理由も上手く説明できるのだろう。だが――
+　リコたちアンドロイドが作られた理由。東は、人間を作ることが目的だと言っていたけど、おそらくそれはリコの求めている答えではないのだろう。リコが投げかけているのは、なぜ人間の模造品を作ろうと思ったかという、もっと根源的な問いだ。もしも神が、全能の神とやらがこの宇宙の外にいるならば、彼は人を作った理由も上手く説明できるのだろう。だが――
 「……それは、分からない」
 　だが希海は神ならぬ人間だ。ましてや技術者でもなければSDRの社員でもない。そんな希海が、リコの求めている答えなど持ちあわせていようはずもなかった。
 「ふふっ。そうですよね」
