--- a/hardproblem/3-02.html
+++ b/hardproblem/3-02.html
@@ -23,11 +23,11 @@
 「…………」
 　希海は透明のビニール傘越しに、隣を歩くリコの様子を窺ってみる。傘を濡らす水滴のせいでその表情はよく見えないものの、吹き付ける風と必死に戦っていることは見て取れた。
 　なぜリコにそんなものがついているのか。
-　希海にはその理由が全く分からなかった。いくら最先端技術を集めて作られたヒューマノイドとは言え、生殖機能が実装されているなんて聞いたことがない。そればかりか、生殖機能を人工的に再現すること自体が、未だなされていないはずだ。人工授精もクローン技術も最終的には母親の子宮で胎児を育てなければならないし、ましてやリコはロボット。形質をどうやって交配可能な<ruby>塩基配列<rp>(</rp><rt>シークエンス</rt><rp>)</rp></ruby>に落としこむのか。卵細胞の培養はどうするのか。受精ができたところで、胎児をどうやって育てるのか。人工生殖技術の確立に向けて解決しなければならない課題は山積みであろう。
+　希海にはその理由が全く分からなかった。いくら最先端技術を集めて作られたアンドロイドとは言え、生殖機能が実装されているなんて聞いたことがない。そればかりか、生殖機能を人工的に再現すること自体が、未だなされていないはずだ。人工授精もクローン技術も最終的には母親の子宮で胎児を育てなければならないし、ましてやリコはロボット。形質をどうやって交配可能な<ruby>塩基配列<rp>(</rp><rt>シークエンス</rt><rp>)</rp></ruby>に落としこむのか。卵細胞の培養はどうするのか。受精ができたところで、胎児をどうやって育てるのか。人工生殖技術の確立に向けて解決しなければならない課題は山積みであろう。
 ――詭弁だ。
 　不意に、心の奥底の声が告げた。そうだ。希海だって本当は知っている。知っていながら、あえて分からないふりをしているだけなのだ。女性器には“子供を作る以外の使い道”もあるということを。
 　傘を掴む手が震えた。
-　『そういう店』で『そういうサービス』を提供するヒューマノイドがこの世界には少なからずいる。ある国ではマフィアがどこからか攫ってきたロボットをそのような業務に従事させ、またある国では人身売買を減らすために政府が率先してそのためのヒューマノイドを生産している。インターネットの広がりとともにアダルトサイトが増えていったのと同様に、ロボット技術が発展するにしたがって性産業に従事するヒューマノイドの存在はもはや珍しいものではなくなってきているのだ。
+　『そういう店』で『そういうサービス』を提供するアンドロイドがこの世界には少なからずいる。ある国ではマフィアがどこからか攫ってきたロボットをそのような業務に従事させ、またある国では人身売買を減らすために政府が率先してそのためのアンドロイドを生産している。インターネットの広がりとともにアダルトサイトが増えていったのと同様に、ロボット技術が発展するにしたがって性産業に従事するアンドロイドの存在はもはや珍しいものではなくなってきているのだ。
 　だから、リコにあれが付いていた理由も、ひょっとすると――
 　希海は大きく深呼吸をし、自らの考えを打ち消そうとする。だが、一旦頭に湧いた考えはなかなかどこかへ飛んでいってはくれない。風呂でリコのそれを見てしまった直後なら『そんな馬鹿な』と忘れることができたのだが、その日の晩に閲覧したウェブサイトのせいで、嫌な考えが頭から離れずにいた。
 「入らないんですか？」
@@ -104,7 +104,7 @@
 「今日で3日目だ」
 「ロボットでもニューロワームに感染することがあるんですか？　治療法は一般的に行われているルーミングですよね？」
 　東は質問の意図が読めないようだった。矢継ぎ早に質問を投げつける希海に、不審そうに眉を寄せている。
-「ああ、そうだ。一度話したと思うが、ウチのヒューマノイドはプロセッサにオルゴンを利用しているから人間と同じようにワームに感染する。治療法も同じだが、いかんせんロボットなので普通の病院には連れて行けない。だからこうして慌ただしくしているわけさ」
+「ああ、そうだ。一度話したと思うが、ウチのアンドロイドはプロセッサにオルゴンを利用しているから人間と同じようにワームに感染する。治療法も同じだが、いかんせんロボットなので普通の病院には連れて行けない。だからこうして慌ただしくしているわけさ」
 　よし、いける。
 　希海はそう思った。相手が人間でないことが不安だったが、前例があるのだ。発症からの期間だって条件を満たしている。
 「これでいいかい？　よかったらこれで失敬するよ」
