--- a/hardproblem/3-03.html
+++ b/hardproblem/3-03.html
@@ -22,10 +22,10 @@
 　ノックの音がした。残響のない乾いた響き。周囲の壁に貼られた防音フェルトのせいで、ルーミング室の扉をノックすれば必然的にこのような軽い音がする。
 　ああ、そういえばこんな音だった。妙な懐かしさを覚えながら開けた扉の先には、白衣を着た男性が立っていた。歳の頃は30代後半といったところだろうか。視界の端に捉えた顔つきはいかにも生真面目で優しそうな感じである。おそらく家ではいい父親なのだろう。希海は何の根拠もなくそう思った。
 　男は身体検査の結果に異常がなかったことを簡潔に告げると、続いて患者の状況についての説明を始める。
-「今回処置していただくヒューマノイドの型番はSUM17M4JP1715。青山さんが購入されたリコちゃんと同じサマリー17シリーズ第4世代ですね。言語も同じ日本語ですが、こちらはリコちゃんと違って男性型です。名前は小春くん」
+「今回処置していただくアンドロイドの型番はSUM17M4JP1715。青山さんが購入されたリコちゃんと同じサマリー17シリーズ第4世代ですね。言語も同じ日本語ですが、こちらはリコちゃんと違って男性型です。名前は小春くん」
 「…………」
 　いたのか、男性型。
-　希海は喉元まで出かかった素っ頓狂な声を飲み込む。そういえばいつだったか、東がリコのことを「女性型」と言っていた気がする。女性型があるのなら男性型だってあるのだろう。考えてみれば当たり前のことだったが、テレビなどで見かけるヒューマノイドが決まって女性型だったせいでその存在がすっぽり頭から抜け落ちてしまっていた。
+　希海は喉元まで出かかった素っ頓狂な声を飲み込む。そういえばいつだったか、東がリコのことを「女性型」と言っていた気がする。女性型があるのなら男性型だってあるのだろう。考えてみれば当たり前のことだったが、テレビなどで見かけるアンドロイドが決まって女性型だったせいでその存在がすっぽり頭から抜け落ちてしまっていた。
 「外見はリコちゃんと同じくらいの年齢です。顔立ちに関してはやや中性的といったところでしょうか。まあこれに関しては後にお渡しします資料に顔写真が載っていますので、そちらを参考になさってください。それで、ワーム感染の原因となった出来事ですが……」
 　希海は部屋の側面をちらりと見た。おそらく、この壁の向こうにその『小春くん』とやらが居るのだろう。患者に怨恨を抱かれる可能性があるルーミング作業では、作業者と患者の部屋を分けるのが鉄則だった。両者が同じ部屋にいると、どちらかが目を覚ましたときに二次的なトラブルが発生しかねない。
 「原因は、おそらく失恋ですね」
@@ -33,7 +33,7 @@
 　今度こそ素っ頓狂な声が出た。
 「え、えーっとそれは、『恋を失う』と書くあの……」
 「はい、その失恋です」
-　希海が受けた説明によると、オーナーは古守区にある個人商店の店主で、なかなか後を継ごうとしない息子に代わって店を手伝ってもらおうとヒューマノイドを購入したらしい。番頭として彼の仕事を手伝っていた小春は、仕事を通じて一人の女の子と知り合いになった。近くの高校に通う女子生徒で、その店にもよく顔を出す常連だったとのことだ。
+　希海が受けた説明によると、オーナーは古守区にある個人商店の店主で、なかなか後を継ごうとしない息子に代わって店を手伝ってもらおうとアンドロイドを購入したらしい。番頭として彼の仕事を手伝っていた小春は、仕事を通じて一人の女の子と知り合いになった。近くの高校に通う女子生徒で、その店にもよく顔を出す常連だったとのことだ。
 　女の子が来るたびに、小春は嬉しそうに彼女と話をした。彼女が店に訪れたときの小春の喜び方は尋常ではなく、仕事そっちのけで女の子と会話をしていることも多々あったそうである。最初のうちは細かく注意していたオーナーだったが、女の子と楽しそうに話す小春の表情にピンときたらしく、最近では女の子が来ると自分が店番をしていたという。
 「そしてある朝、小春くんは目覚めなくなりました。その前日、夜遅く外出先から帰った小春くんは非常に落ち込んだ様子だったそうです。出掛ける際にはその女子生徒と合ってくると漏らしていたそうなので、おそらく、直接会って思いの丈を伝えたのでしょう。そしてあまり良い振られ方をしなかった。帰りが遅くなったことをきつく叱ったというオーナーの話もありますし、失恋のショックと叱られたショックで精神の抵抗力が落ちていたんでしょうね。個体差はありますが第4世代は精神的にまだ幼いところもありますし、ある意味仕方がないことなのかも知れません」
 　男は目を伏せ小さく息を落とす。
@@ -46,7 +46,7 @@
 　希海は言われたとおりに薬を飲みに行った。手渡された資料を読みながらスリッパを鳴らして廊下を歩き、元居た部屋へ戻ってくると、先ほどから何度も目にしていたそれが改めて視界に飛び込んでくる。
 　暗幕で囲われたベッドと、その<ruby>傍<rp>(</rp><rt>かたわ</rt><rp>)</rp></ruby>らに鎮座する巨大なグレーの<ruby>機械<rp>(</rp><rt>マシン</rt><rp>)</rp></ruby>。ロッカーを数段積み上げたような何の飾り気もない外観は、それがただ機能の追求のみを目的として設計されていることを如実に示している。これこそが、患者と作業者の脳を接続するためのルーミングマシンだ。
 　そしてその機械には、一切の表情が欠落していた。
-　リコのようなヒューマノイドでなくとも、機械にだって表情はある。コンピュータなら、煌々と光を放つディスプレイだったり、時折、思い出したように唸りを上げるファンだったりがそうだ。エレベータなら、モーターの駆動音や操作パネルのランプ。電子レンジならパネルの操作音や加熱時の低周波などである。もちろん、あくまで比喩的なものだが、そういった表情がこの機械からは欠落しているのだ。音を出さなければ光も出さない。制御盤はすべてツマミか押しボタン式で、計器類もいまどきめったに見かけないアナログ仕様。
+　リコのようなアンドロイドでなくとも、機械にだって表情はある。コンピュータなら、煌々と光を放つディスプレイだったり、時折、思い出したように唸りを上げるファンだったりがそうだ。エレベータなら、モーターの駆動音や操作パネルのランプ。電子レンジならパネルの操作音や加熱時の低周波などである。もちろん、あくまで比喩的なものだが、そういった表情がこの機械からは欠落しているのだ。音を出さなければ光も出さない。制御盤はすべてツマミか押しボタン式で、計器類もいまどきめったに見かけないアナログ仕様。
 「あんた、相変わらず愛想ないわねえ……」
 　無言のままベッドの横に鎮座する機械をぺたぺたと触ってみる。ひんやりとした金属の冷たさが心地良い。
 「ま、仕方ないわよね。それもあんたの仕事のうちなんだから」
