脱字修正その他

--- a/hardproblem/1-06.html
+++ b/hardproblem/1-06.html
@@ -79,7 +79,7 @@
 　思ってもみなかった話に希海は青ざめる。彼女は記憶を失っただけで、それ以外に何も問題はないのだと思っていた。いや、実際にその通りであり、記憶の欠落以外はまったくの正常だ。だが、その欠落した記憶こそが唯一にして最大の問題点だったのである。
 「では出荷をしないで、ここの施設で一生を過ごせるのかというとこれも難しい。アンドロイドの維持費はオーナー負担分だけでも最低月5万。潜在的に企業が負担している分まで含めるとこれの2から4倍だな。いくら世界に名だたるSDRといえども、こんな無駄な費用をポンと払ってくれるほど太っ腹じゃない。ちなみに多くのアンドロイドは無停止システムだから、電源を切って置いておくことはできんぞ。スイッチをOFFにした瞬間から排熱機構がストップして情報の揮発による脳死へと一直線だ」
 「……それで私ですか」
-「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに言葉は悪いがハルカは“中古品”だ。価格的には新品の半分以下だし、その上社員の私なら、割引価格で購入できる」
+「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いでいるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに言葉は悪いがハルカは“中古品”だ。価格的には新品の半分以下だし、その上社員の私なら、割引価格で購入できる」
 　確かに東の言い分には理があるように思える。思えるが、希海がハルカのオーナーになるという帰結に至るには、まだ十分な<ruby>理屈<rp>(</rp><rt>ロジック</rt><rp>)</rp></ruby>があるとは言えない。
 「それなら、私よりもっと適した人がここいるじゃないですか」
 「ん？　私かい？」
