--- a/hardproblem/2-02.html
+++ b/hardproblem/2-02.html
@@ -16,7 +16,7 @@
 　ベッドタウンとしての色彩が強い<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンにあって、昼間でも人通りが絶えない繁華な場所が存在する。
 　地区センター。
 　いわゆる駅前である。真揺ニュータウンには北・中央・南の3ヶ所に地区センターが存在し、それぞれが各地区の商業・交通の拠点となっている。中でも真揺中心駅の周囲に広がる中央地区センターはとりわけ規模が大きく、駅周辺にはショッピングモールや百貨店・オフィスなどが集積している。
-　そして、その中央地区センターの一角。地下鉄の改札を出て階段を登ったすぐのところにあるガラス張りの小洒落た店舗の前にふたりは立っていた。
+　そして、その中央地区センターの一角。<ruby>地鉄<rp>(</rp><rt>メトロ</rt><rp>)</rp></ruby>の改札を出て階段を登ったすぐのところにあるガラス張りの小洒落た店舗の前にふたりは立っていた。
 「…………」
 　行き交う人々の往来を背に、リコはガラスの向こう側を物珍しそうに眺めている。
 「うーん」
